--- a/Final Project/instaclone/Gemfile
+++ b/Final Project/instaclone/Gemfile
@@ -38,7 +38,11 @@ gem 'sassc-rails'
 # gem "kredis"
 
 # Use Active Model has_secure_password [https://guides.rubyonrails.org/active_model_basics.html#securepassword]
-# gem "bcrypt", "~> 3.1.7"
+gem "bcrypt", "~> 3.1.7"
+
+gem 'attr_encrypted'
+
+gem 'friendly_id', '~> 5.4.0'
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem "tzinfo-data", platforms: %i[ mingw mswin x64_mingw jruby ]
